add casino home part

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </section>
 
 
-<section class="main_body">
+<section class="main_body common_padding">
 	
 	<div class="short_info">
 		
@@ -72,6 +72,71 @@
 
 			<p>No Limit Casinos provides you with detailed and up-to-date information about the legal gambling situation in Germany. Using our casino evaluation system, we review, rate, compare all casinos that are legally available to play for German players. And deliver you the most trustworthy casinos without German license; tips and tricks about casino bonuses and the ways to take advantage of them; gives you a heads up about online Casinos that you should avoid to ensure both your safety and freedom of choice!</p>
 		</div>
+	</div>
+</section>
+
+
+<section class="casino_list_fluid common_padding">
+	
+
+	<div class="casino_list_container common_container">
+		<div class="casino_list_item">
+			<div class="casino_list_logo js-back">
+				<a href="">
+					
+					<img src="images/test.png">
+				</a>
+
+			</div>
+
+			<div class="casino_list_info">
+				<span>Welcome pack up to</span>
+				<span class="bold_title">2000EUR</span>
+				<span>+100 Free Spins On Bull in a China Shop</span>
+
+			</div>
+
+			<div class="casino_list_li">
+
+				<ul>
+					<li>
+						<svg xmlns="http://www.w3.org/2000/svg" width="12.832" height="14" viewBox="0 0 12.832 14">
+						  <path id="bookmark" d="M12.162,14A1.633,1.633,0,0,1,11,13.511L7.416,9.945,3.829,13.513a1.633,1.633,0,0,1-1.805.355A1.633,1.633,0,0,1,1,12.338V2.916A2.916,2.916,0,0,1,3.916,0h7a2.916,2.916,0,0,1,2.916,2.916v9.422a1.633,1.633,0,0,1-1.021,1.53,1.672,1.672,0,0,1-.649.129ZM3.916,1.166a1.75,1.75,0,0,0-1.75,1.75v9.422a.492.492,0,0,0,.838.35H3l4-3.978a.583.583,0,0,1,.822,0l4,3.977a.492.492,0,0,0,.838-.35V2.916a1.75,1.75,0,0,0-1.75-1.75Z" transform="translate(-1)" fill="#2ecc71"/>
+						</svg>
+						<span>Malta Gaming Authority License</span>
+					</li><li>
+						<svg xmlns="http://www.w3.org/2000/svg" width="12.832" height="14" viewBox="0 0 12.832 14">
+						  <path id="bookmark" d="M12.162,14A1.633,1.633,0,0,1,11,13.511L7.416,9.945,3.829,13.513a1.633,1.633,0,0,1-1.805.355A1.633,1.633,0,0,1,1,12.338V2.916A2.916,2.916,0,0,1,3.916,0h7a2.916,2.916,0,0,1,2.916,2.916v9.422a1.633,1.633,0,0,1-1.021,1.53,1.672,1.672,0,0,1-.649.129ZM3.916,1.166a1.75,1.75,0,0,0-1.75,1.75v9.422a.492.492,0,0,0,.838.35H3l4-3.978a.583.583,0,0,1,.822,0l4,3.977a.492.492,0,0,0,.838-.35V2.916a1.75,1.75,0,0,0-1.75-1.75Z" transform="translate(-1)" fill="#2ecc71"/>
+						</svg>
+						<span>Malta Gaming Authority License</span>
+					</li><li>
+						<svg xmlns="http://www.w3.org/2000/svg" width="12.832" height="14" viewBox="0 0 12.832 14">
+						  <path id="bookmark" d="M12.162,14A1.633,1.633,0,0,1,11,13.511L7.416,9.945,3.829,13.513a1.633,1.633,0,0,1-1.805.355A1.633,1.633,0,0,1,1,12.338V2.916A2.916,2.916,0,0,1,3.916,0h7a2.916,2.916,0,0,1,2.916,2.916v9.422a1.633,1.633,0,0,1-1.021,1.53,1.672,1.672,0,0,1-.649.129ZM3.916,1.166a1.75,1.75,0,0,0-1.75,1.75v9.422a.492.492,0,0,0,.838.35H3l4-3.978a.583.583,0,0,1,.822,0l4,3.977a.492.492,0,0,0,.838-.35V2.916a1.75,1.75,0,0,0-1.75-1.75Z" transform="translate(-1)" fill="#2ecc71"/>
+						</svg>
+						<span>Malta Gaming Authority License</span>
+					</li>
+				</ul>
+			</div>
+
+			<div class="casino_list_links">
+				<div class="casino_list_button">
+					<a href="">
+						<svg id="Component_3_1" data-name="Component 3 – 1" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+						  <rect id="Rectangle_13" data-name="Rectangle 13" width="20" height="20" fill="none"/>
+						  <path id="playing-cards" d="M16.529,5.667l-2.37,7.223a3.434,3.434,0,0,1-2.05,2.222A4.84,4.84,0,0,0,12.5,13.2V6.253A4.867,4.867,0,0,0,7.639,1.392H6.483A3.484,3.484,0,0,1,10.264.156l3.949,1.213A3.487,3.487,0,0,1,16.529,5.667Zm-5.417.586V13.2A3.477,3.477,0,0,1,7.639,16.67H3.472A3.477,3.477,0,0,1,0,13.2V6.253A3.477,3.477,0,0,1,3.472,2.781H7.639a3.477,3.477,0,0,1,3.472,3.472ZM8.334,9.031a1.389,1.389,0,1,0-2.778,0,1.389,1.389,0,1,0-2.778,0c0,1.007,1.072,2.355,1.885,3.04a1.383,1.383,0,0,0,1.786,0C7.262,11.386,8.334,10.038,8.334,9.031Z" transform="translate(1.667 1.658)" fill="#fff"/>
+						</svg>
+						<span>Play now</span>
+					</a>
+				</div>
+
+				<div class="casino_start">
+
+				</div>
+
+
+			</div>
+		</div>
+
 	</div>
 </section>
 
