--- a/index.html
+++ b/index.html
@@ -670,6 +670,93 @@
 </div>
 
 
+
+
+<footer class="common_padding">
+
+	<div class="common_container">
+		<div class="footer_top">
+			<div class="footer_paragraph">
+				<div class="footer_paragraph_title">
+					18+ | T&C Apply | New Customers Only | Gamble Responsibly, begambleaware.org‍
+				</div>
+				<p>
+					DISCLAIMER: We are not responsible for incorrect information on bonuses, offers and promotions on this website. We always recommend that the player examines the conditions and double-check the bonus directly on the casino companies website.
+
+					RESPONSIBLE GAMING: We at Aboutslots.com are not responsible for any losses from gambling in casinos linked to any of our bonus offers. The player is responsible for how much the person is willing and able to play for. We always urge a use of responsible gambling.
+				</p>
+			</div>
+			<div class="footer_nav">
+				<div class="footer_nav_title">
+					EXPLORE
+				</div>
+
+				<nav>
+					<ul>
+						<li><a href="">casino bonuses</a></li>
+						<li><a href="">casino bonuses</a></li>
+						<li><a href="">casino bonuses</a></li>
+						<li><a href="">casino bonuses</a></li>
+						<li><a href="">casino bonuses</a></li>
+						<li><a href="">casino bonuses</a></li>
+					</ul>
+				</nav>
+			</div>
+				<div class="footer_nav">
+				<div class="footer_nav_title">
+					EXPLORE
+				</div>
+
+				<nav>
+					<ul>
+						<li><a href="">Useful Links</a></li>
+						<li><a href="">casino bonuses</a></li>
+						<li><a href="">casino bonuses</a></li>
+						<li><a href="">casino bonuses</a></li>
+						<li><a href="">casino bonuses</a></li>
+						<li><a href="">casino bonuses</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+		<div class="footer_bottom">
+			<div class="footer_logos">
+				<a href="">
+					<img src="images/XMLID_30_.png">
+				</a>	
+			</div>
+
+			<div class="footer_logos">
+				<a href="">
+					<img src="images/gambleaware.png">
+				</a>	
+			</div>
+
+			<div class="footer_logos">
+				<a href="">
+					<img src="images/Group 842.png">
+				</a>	
+			</div>
+
+			<div class="footer_logos">
+				<a href="">
+					<img src="images/GPWA_SEAL.png">
+				</a>	
+			</div>
+			<div class="footer_logos">
+				<a href="">
+					<img src="images/18plus.png">
+				</a>	
+			</div>
+		</div>
+	</div>
+</footer>
+<div class="copyright">
+
+	<span>© 2021Casino Name - All Rights Reserved.</span>
+
+</div>
+
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/slick.js"></script>
 <script src="js/main.js"></script>
