--- a/keyword_page.html
+++ b/keyword_page.html
@@ -64,7 +64,7 @@
 
 		<div class="breadcamp">
 
-			<a href="">Home</a>
+			<a href="">Casino page</a>
 			<a href="">Keyword page</a>
 		</div>
 	</div>
