--- a/privacy.html
+++ b/privacy.html
@@ -249,3 +249,15 @@
 	<span>© 2021Casino Name - All Rights Reserved.</span>
 
 </div>
+
+
+
+
+<script src="js/jquery-3.3.1.min.js"></script>
+
+<script src="js/swipper.js"></script>
+  
+<script src="js/slick.js"></script>
+<script src="js/main.js"></script>
+</body>
+</html>
