--- a/blog_inner.html
+++ b/blog_inner.html
@@ -93,7 +93,7 @@
 
 
 
-<div class="blog_inner_fluid">
+<div class="blog_inner_fluid common_padding">
 	<div class="blog_inner_container">
 		<div class="blog_inner_img">
 
