--- a/casino_page.html
+++ b/casino_page.html
@@ -147,10 +147,27 @@
 					<div class="payment_method_container">
 						<div class="payment_header">
 							<div>Payment Methods (+35)</div>
-							<div class="show_all">Show all</div>
+							<div class="toggler show_all">Show all</div>
+							<div class="toggler show_less">Show less</div>
 						</div>
 
 						<div class="logo_container">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
+							<img src="images/Bitmap.png">
 							<img src="images/Bitmap.png">
 							<img src="images/Bitmap.png">
 							<img src="images/Bitmap.png">
@@ -463,7 +480,7 @@
 		</div>
 	</div>
 
-	<div class="review_fluid">
+	<div class="review_fluid common_padding">
 		<div class="review_container">
 			<div class="casino_start">
 					<div class="rev_stars">
