--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 </header>
 
 
-<div class="common_header bg_right_bottom">
+<div class="common_header bg_right_bottom contact_header">
 
 	<div class="common_header_body">
 
