--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
 			<img src="https://purepng.com/public/uploads/large/purepng.com-disney-logologobrand-logoiconslogos-251519939495wtv86.png">
 		</a>
 	</div>
+
+	<div class="header_hamburger">
+		 <div class="nav-container">
+            <input class="checkbox" type="checkbox" name="" id="" />
+            <div class="hamburger-lines">
+              <span class="line line1"></span>
+              <span class="line line2"></span>
+              <span class="line line3"></span>
+            </div>  
+        
+       
+        </div>
+	</div>
 	<div class="header_right">
 		<nav>
 			<ul>
@@ -241,7 +254,7 @@
   </div>
 
   <div class="swiper_progress_bar">
-  	<div class="swiper_progress test">
+  	<div class="swiper_progress test1">
 
   	</div>
 
@@ -831,7 +844,7 @@
 </section>
 
 
-<section class="long_text_fluid common_padding">
+<section class="long_text_fluid grey common_padding">
 	
 	<div class="long_text_container common_container">
 
@@ -1182,6 +1195,29 @@
 
 
 <footer class="common_padding">
+
+	<div class="scrop_top">
+
+		
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="65" height="65" viewBox="0 0 65 65">
+  <defs>
+    <filter id="Ellipse_10" x="0" y="0" width="65" height="65" filterUnits="userSpaceOnUse">
+      <feOffset dy="3" input="SourceAlpha"/>
+      <feGaussianBlur stdDeviation="3" result="blur"/>
+      <feFlood flood-opacity="0.161"/>
+      <feComposite operator="in" in2="blur"/>
+      <feComposite in="SourceGraphic"/>
+    </filter>
+  </defs>
+  <g id="top" transform="translate(-1270 -4404)">
+    <g transform="matrix(1, 0, 0, 1, 1270, 4404)" filter="url(#Ellipse_10)">
+      <circle id="Ellipse_10-2" data-name="Ellipse 10" cx="23.5" cy="23.5" r="23.5" transform="translate(9 6)" fill="#2c3e50"/>
+    </g>
+    <path id="angle-up" d="M23.71,16.29,15.54,8.12a5,5,0,0,0-7.08,0L.29,16.29a1,1,0,0,0,1.42,1.42L9.88,9.54a3,3,0,0,1,4.24,0l8.17,8.17a1,1,0,1,0,1.42-1.42Z" transform="translate(1290.499 4421.172)" fill="#fff"/>
+  </g>
+</svg>
+
+	</div>
 
 	<div class="common_container">
 		<div class="footer_top">
