--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
 </header>
 
 
-<div class="common_header bg_left">
+<div class="common_header blog_header bg_left">
 
 	<div class="common_header_body">
 
@@ -262,6 +262,28 @@
 						</div>
 				 </div>
 			</div>
+
+			<div class="common_pagination common_container mobile">
+
+				<div class="pagination">
+					<a href="">
+						<svg xmlns="http://www.w3.org/2000/svg" width="6" height="12.687" viewBox="0 0 6 12.687">
+						  <path id="angle-up" d="M12.527,11.744,8.21,7.427a2.642,2.642,0,0,0-3.741,0L.151,11.744a.531.531,0,0,0,.75.75L5.219,8.178a1.585,1.585,0,0,1,2.24,0l4.317,4.317a.531.531,0,1,0,.75-.75Z" transform="translate(-6.651 12.683) rotate(-90)" fill="#2c3e50"/>
+						</svg>
+					</a>
+					<a href="">1</a>
+					<a href="">2</a>
+					<a href="">3</a>
+					<span>...</span>
+					<a href="">
+						<svg xmlns="http://www.w3.org/2000/svg" width="6" height="12.687" viewBox="0 0 6 12.687">
+						  <path id="angle-up" d="M12.527,11.744,8.21,7.427a2.642,2.642,0,0,0-3.741,0L.151,11.744a.531.531,0,0,0,.75.75L5.219,8.178a1.585,1.585,0,0,1,2.24,0l4.317,4.317a.531.531,0,1,0,.75-.75Z" transform="translate(12.651 0.004) rotate(90)" fill="#2c3e50"/>
+						</svg>
+					</a>
+
+				</div>
+
+			</div>
 		</div>
 
 		<div class="blog_right_fluid">
@@ -359,7 +381,7 @@
 	</div>
 </div>
 
-<div class="common_pagination common_container">
+<div class="common_pagination common_container fullscreen">
 
 	<div class="pagination">
 		<a href="">
