change casino page

--- a/casino_page.html
+++ b/casino_page.html
@@ -414,7 +414,7 @@
 
 
 
-	<div class="common_container common_padding">
+	<div class="common_container common_padding list_fluid">
 
 		<div class="lists_fluid">
 			
