add casino page animes

--- a/casino_page.html
+++ b/casino_page.html
@@ -107,6 +107,8 @@
 		<div class="body_right">
 			<div class="casino_right_cotent">
 				<div class="casino_right_tab">
+					<div class="rainbow"><span></span><span></span></div>
+					<div class="ranbow_wrapper">
 					<div class="casino_list_info">
 						<span>Welcome pack up to</span>
 						<span class="bold_title">2000EUR</span>
@@ -123,10 +125,12 @@
 							<span>Play now</span>
 						</a>
 					</div>
-
+					</div>
 				</div>
 
 				<div class="casino_right_tab">
+					<div class="rainbow"><span></span><span></span></div>
+					<div class="ranbow_wrapper">
 					<div class="casino_list_info">
 						<span>Welcome pack up to</span>
 						<span class="bold_title">2000EUR</span>
@@ -143,7 +147,7 @@
 							<span>Play now</span>
 						</a>
 					</div>
-
+					</div>
 				</div>
 
 
