--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
    	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    	<!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.css"> -->
+   		  <link rel="stylesheet" type="text/css" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
    	<link rel="stylesheet" type="text/css" href="css/slick.css">
    	<link rel="stylesheet" type="text/css" href="css/slick-theme.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -74,7 +75,7 @@
 <div class="blog_fluid common_padding">
 	<div class="blog_container common_container">
 		<div class="blog_left_fluid">
-			<div class="blog_main_body">
+			<div class="blog_main_body" data-aos="fade-up">
 				<div class="blog_img">
 
 					<a href="">
@@ -137,7 +138,7 @@
 				 </div>
 			</div>
 
-			<div class="blog_main_body">
+			<div class="blog_main_body" data-aos="fade-up">
 				<div class="blog_img">
 
 					<a href="">
@@ -200,7 +201,7 @@
 				 </div>
 			</div>
 
-			<div class="blog_main_body">
+			<div class="blog_main_body" data-aos="fade-up">
 				<div class="blog_img">
 
 					<a href="">
@@ -490,6 +491,7 @@
 
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/slick.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
