--- a/blog.html
+++ b/blog.html
@@ -491,6 +491,7 @@
 
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/slick.js"></script>
+<script src="js/swipper.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="js/main.js"></script>
 </body>
