--- a/casino_page.html
+++ b/casino_page.html
@@ -317,10 +317,10 @@
 
 	<div class="games_links_wrapper" data-aos="fade-up">
 		<div class="games_links">
-			<a href="">
+			<!-- <a href=""> -->
 				<img src="images/slot-machine.png">
 				<span>slots</span>
-			</a>
+			<!-- </a> -->
 		</div>
 
 		<div class="games_links">
