--- a/index.html
+++ b/index.html
@@ -869,7 +869,13 @@
 
 	</div>
 
+
+
 </section>
+
+<div class="common_banner common_container">
+        <img src="https://imageio.forbes.com/specials-images/imageserve/5d35eacaf1176b0008974b54/0x0.jpg?format=jpg&crop=4560,2565,x790,y784,safe&fit=crop">
+      </div>
 
 
 
