add new css styles

--- a/index.html
+++ b/index.html
@@ -100,10 +100,7 @@
 
             </div>
             <div class="item_title_cont">
-
-            <svg xmlns="http://www.w3.org/2000/svg" width="36.67" height="34.927" viewBox="0 0 36.67 34.927">
-              <path id="Path_24" data-name="Path 24" d="M33.243,14.917,23.6,5.274,20.171,8.7l9.642,9.642a6.881,6.881,0,0,1,0,9.718c-2.68,2.681-6.615,2.391-9.718,0a15.785,15.785,0,0,1-1.8-1.714,15.9,15.9,0,0,1-1.715,1.714,7.46,7.46,0,0,1-4.858,2.014,6.873,6.873,0,0,1-4.86-11.732l4.475-4.474,1.815,1.815,3.43-3.429-1.815-1.816,7.009-7.009L18.349,0,11.337,7.012,9.5,5.173,6.069,8.6l1.839,1.839L3.433,14.916A11.72,11.72,0,0,0,18.342,32.875a11.718,11.718,0,0,0,14.9-17.958" transform="translate(0)" fill="#fff"/>
-            </svg>
+              <img src="images/test1.png">
 
             </div>
 
@@ -142,9 +139,7 @@
             </div>
             <div class="item_title_cont">
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="36.67" height="34.927" viewBox="0 0 36.67 34.927">
-              <path id="Path_24" data-name="Path 24" d="M33.243,14.917,23.6,5.274,20.171,8.7l9.642,9.642a6.881,6.881,0,0,1,0,9.718c-2.68,2.681-6.615,2.391-9.718,0a15.785,15.785,0,0,1-1.8-1.714,15.9,15.9,0,0,1-1.715,1.714,7.46,7.46,0,0,1-4.858,2.014,6.873,6.873,0,0,1-4.86-11.732l4.475-4.474,1.815,1.815,3.43-3.429-1.815-1.816,7.009-7.009L18.349,0,11.337,7.012,9.5,5.173,6.069,8.6l1.839,1.839L3.433,14.916A11.72,11.72,0,0,0,18.342,32.875a11.718,11.718,0,0,0,14.9-17.958" transform="translate(0)" fill="#fff"/>
-            </svg>
+              <img src="images/test.png">
 
             </div>
 
@@ -186,9 +181,7 @@
             </div>
             <div class="item_title_cont">
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="36.67" height="34.927" viewBox="0 0 36.67 34.927">
-              <path id="Path_24" data-name="Path 24" d="M33.243,14.917,23.6,5.274,20.171,8.7l9.642,9.642a6.881,6.881,0,0,1,0,9.718c-2.68,2.681-6.615,2.391-9.718,0a15.785,15.785,0,0,1-1.8-1.714,15.9,15.9,0,0,1-1.715,1.714,7.46,7.46,0,0,1-4.858,2.014,6.873,6.873,0,0,1-4.86-11.732l4.475-4.474,1.815,1.815,3.43-3.429-1.815-1.816,7.009-7.009L18.349,0,11.337,7.012,9.5,5.173,6.069,8.6l1.839,1.839L3.433,14.916A11.72,11.72,0,0,0,18.342,32.875a11.718,11.718,0,0,0,14.9-17.958" transform="translate(0)" fill="#fff"/>
-            </svg>
+              <img src="images/NoPath.jpg">
 
             </div>
 
