update home slider csS

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
             
             <p>
               15% Cashback für wetten auf die olympischen winterspiele
+                            15% Cashback für wetten auf die 
 
             </p>
           </div>
