--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             </div>
             <div class="item_title_cont">
-              <img src="images/test1.png">
+              <img src="http://bestecasinobonuses.de/storage/app/uploads/public/61b/a14/44c/61ba1444c146b367928847.png">
 
             </div>
             </a>
@@ -142,7 +142,7 @@
             </div>
             <div class="item_title_cont">
 
-              <img src="images/test.png">
+              <img src="http://bestecasinobonuses.de/storage/app/uploads/public/620/237/12e/62023712ef246958174006.png">
 
             </div>
             </a>
@@ -184,7 +184,7 @@
             </div>
             <div class="item_title_cont">
 
-              <img src="images/NoPath.jpg">
+              <img src="http://bestecasinobonuses.de/storage/app/uploads/public/620/236/99c/62023699c8942044982007.png">
 
             </div>
             </a>
@@ -217,21 +217,21 @@
          <div class="home_slider_fluid">
           <div class="home_slide_item_wrapper js-back">
             <a href="">
-            <div class="top_star">
-              <span>4.9</span>
+              <div class="top_star">
+                <span>4.9</span>
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-              <path id="Star" d="M10.685,16.584,4.5,20l1.18-7.236-5-5.125L7.6,6.584,10.685,0l3.09,6.584,6.91,1.056-5,5.125L16.866,20Z" transform="translate(-0.685)" fill="#ffe300"/>
-            </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                <path id="Star" d="M10.685,16.584,4.5,20l1.18-7.236-5-5.125L7.6,6.584,10.685,0l3.09,6.584,6.91,1.056-5,5.125L16.866,20Z" transform="translate(-0.685)" fill="#ffe300"/>
+              </svg>
 
-            </div>
-            <div class="item_title_cont">
+              </div>
+              <div class="item_title_cont">
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="36.67" height="34.927" viewBox="0 0 36.67 34.927">
-              <path id="Path_24" data-name="Path 24" d="M33.243,14.917,23.6,5.274,20.171,8.7l9.642,9.642a6.881,6.881,0,0,1,0,9.718c-2.68,2.681-6.615,2.391-9.718,0a15.785,15.785,0,0,1-1.8-1.714,15.9,15.9,0,0,1-1.715,1.714,7.46,7.46,0,0,1-4.858,2.014,6.873,6.873,0,0,1-4.86-11.732l4.475-4.474,1.815,1.815,3.43-3.429-1.815-1.816,7.009-7.009L18.349,0,11.337,7.012,9.5,5.173,6.069,8.6l1.839,1.839L3.433,14.916A11.72,11.72,0,0,0,18.342,32.875a11.718,11.718,0,0,0,14.9-17.958" transform="translate(0)" fill="#fff"/>
-            </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="36.67" height="34.927" viewBox="0 0 36.67 34.927">
+                <path id="Path_24" data-name="Path 24" d="M33.243,14.917,23.6,5.274,20.171,8.7l9.642,9.642a6.881,6.881,0,0,1,0,9.718c-2.68,2.681-6.615,2.391-9.718,0a15.785,15.785,0,0,1-1.8-1.714,15.9,15.9,0,0,1-1.715,1.714,7.46,7.46,0,0,1-4.858,2.014,6.873,6.873,0,0,1-4.86-11.732l4.475-4.474,1.815,1.815,3.43-3.429-1.815-1.816,7.009-7.009L18.349,0,11.337,7.012,9.5,5.173,6.069,8.6l1.839,1.839L3.433,14.916A11.72,11.72,0,0,0,18.342,32.875a11.718,11.718,0,0,0,14.9-17.958" transform="translate(0)" fill="#fff"/>
+              </svg>
 
-            </div>
+              </div>
             </a>
           </div>
           <div class="casino_text">
