--- a/index.html
+++ b/index.html
@@ -212,6 +212,93 @@
 
 
         </div>
+
+
+      <div class="swiper-slide home_slider_item"> 
+
+         <div class="home_slider_fluid">
+          <div class="home_slide_item_wrapper js-back">
+            <a href="">
+            <div class="top_star">
+              <span>4.9</span>
+
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+              <path id="Star" d="M10.685,16.584,4.5,20l1.18-7.236-5-5.125L7.6,6.584,10.685,0l3.09,6.584,6.91,1.056-5,5.125L16.866,20Z" transform="translate(-0.685)" fill="#ffe300"/>
+            </svg>
+
+            </div>
+            <div class="item_title_cont">
+
+              <img src="images/log5.webp">
+
+            </div>
+            </a>
+          </div>
+          <div class="casino_text">
+            
+            <p>
+              15% Cashback für wetten auf die olympischen winterspiele
+                            15% Cashback für wetten auf die 
+
+            </p>
+          </div>
+
+            <div class="casino_list_button">
+              <a href="">
+                <svg id="Component_3_1" data-name="Component 3 – 1" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                  <rect id="Rectangle_13" data-name="Rectangle 13" width="20" height="20" fill="none"></rect>
+                  <path id="playing-cards" d="M16.529,5.667l-2.37,7.223a3.434,3.434,0,0,1-2.05,2.222A4.84,4.84,0,0,0,12.5,13.2V6.253A4.867,4.867,0,0,0,7.639,1.392H6.483A3.484,3.484,0,0,1,10.264.156l3.949,1.213A3.487,3.487,0,0,1,16.529,5.667Zm-5.417.586V13.2A3.477,3.477,0,0,1,7.639,16.67H3.472A3.477,3.477,0,0,1,0,13.2V6.253A3.477,3.477,0,0,1,3.472,2.781H7.639a3.477,3.477,0,0,1,3.472,3.472ZM8.334,9.031a1.389,1.389,0,1,0-2.778,0,1.389,1.389,0,1,0-2.778,0c0,1.007,1.072,2.355,1.885,3.04a1.383,1.383,0,0,0,1.786,0C7.262,11.386,8.334,10.038,8.334,9.031Z" transform="translate(1.667 1.658)" fill="#fff"></path>
+                </svg>
+                <span>Play now</span>
+              </a>
+          </div>
+          </div>
+        </div>
+
+
+
+      <div class="swiper-slide home_slider_item"> 
+
+         <div class="home_slider_fluid">
+          <div class="home_slide_item_wrapper js-back">
+            <a href="">
+            <div class="top_star">
+              <span>4.9</span>
+
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+              <path id="Star" d="M10.685,16.584,4.5,20l1.18-7.236-5-5.125L7.6,6.584,10.685,0l3.09,6.584,6.91,1.056-5,5.125L16.866,20Z" transform="translate(-0.685)" fill="#ffe300"/>
+            </svg>
+
+            </div>
+            <div class="item_title_cont">
+
+              <img src="images/log6.jpg">
+
+            </div>
+            </a>
+          </div>
+          <div class="casino_text">
+            
+            <p>
+              15% Cashback für wetten auf die olympischen winterspiele
+                            15% Cashback für wetten auf die 
+
+            </p>
+          </div>
+
+            <div class="casino_list_button">
+              <a href="">
+                <svg id="Component_3_1" data-name="Component 3 – 1" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                  <rect id="Rectangle_13" data-name="Rectangle 13" width="20" height="20" fill="none"></rect>
+                  <path id="playing-cards" d="M16.529,5.667l-2.37,7.223a3.434,3.434,0,0,1-2.05,2.222A4.84,4.84,0,0,0,12.5,13.2V6.253A4.867,4.867,0,0,0,7.639,1.392H6.483A3.484,3.484,0,0,1,10.264.156l3.949,1.213A3.487,3.487,0,0,1,16.529,5.667Zm-5.417.586V13.2A3.477,3.477,0,0,1,7.639,16.67H3.472A3.477,3.477,0,0,1,0,13.2V6.253A3.477,3.477,0,0,1,3.472,2.781H7.639a3.477,3.477,0,0,1,3.472,3.472ZM8.334,9.031a1.389,1.389,0,1,0-2.778,0,1.389,1.389,0,1,0-2.778,0c0,1.007,1.072,2.355,1.885,3.04a1.383,1.383,0,0,0,1.786,0C7.262,11.386,8.334,10.038,8.334,9.031Z" transform="translate(1.667 1.658)" fill="#fff"></path>
+                </svg>
+                <span>Play now</span>
+              </a>
+          </div>
+          </div>
+        </div>
+
+
       <div class="swiper-slide home_slider_item"> 
 
          <div class="home_slider_fluid">
